--- a/exam/client/templates/edit.html
+++ b/exam/client/templates/edit.html
@@ -1,3 +1,13 @@
 <h1> Hello edit</h1>
 
 <h2> I should be showing an editing form </h2>
+
+<div ng-controller="updateCtrl" ng-submit="editPost()">
+	<form  method="post">
+		<input type="text" ng-model="post.name" placeholder="Name">
+		<input type="text" ng-model="post.age" placeholder="age">
+		<input type="text" ng-model="post.occupation" placeholder="occupation">
+		<input type="submit">
+	</form>
+	<button ng-click="deletePost()">DELETE</button>
+</div>
